--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "99-template",
+  "name": "react-todo-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wakeupmurad.github.io/react-todo-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
